Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
0.10.0
-
None
-
None
Description
Hi
The following patch is a dirty hack and I assume you will want to have it in a totally different way. But it fixes the crash I get. So far it seems that Transcoder::decode() can get called (from the destructors of static objects) even after it's internal static variables get destroyed (thus decrementing the reference count, thus destroying the referenced object eventually thus having the codes dereference an invalid pointer).
The problem is also present in the ::encode() functions and their "encoder" variable (but it didnt bite my program yet, so I left it there).
Attachments
Attachments
Issue Links
- relates to
-
LOGCXX-159 Initialization of local static objects out of order on Linux
- Resolved