Bug LOGCXX-112: Default encoder crashes when called from static object destructor