include/log4cxx/helpers/objectptr.h
@@ -1,5 +1,5 @@
 /*
- * Copyright 2003,2004 The Apache Software Foundation.
+ * Copyright 2003,2006 The Apache Software Foundation.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -87,6 +87,7 @@ namespace log4cxx
                 {
                     this->p->releaseRef();
                 }
+				this->p = 0;
             }
 
             // Operators
